--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -55,7 +55,7 @@
             </div>
 
             <div class="span-2">
-                <a href="/admin/logout"><img src="/static/images/logout.png" width="45" height="45"><br>
+                <a href="/admin/logout/"><img src="/static/images/logout.png" width="45" height="45"><br>
                 Logout</a>
             </div>            
         </div>
