--- a/templates/product.php.html
+++ b/templates/product.php.html
@@ -132,7 +132,10 @@
 				</span>
             </div>
 			
-
+            <div class="span-4" style="padding-top:10px;">
+             
+                <span style="font-size:25px;font-family:impact;text-shadow: 1px 1px 1px #000;">AZ MOBILE001 </span>
+            </div>
             <div class="span-2">
                 <a href="/product/search/"><img src="/static/images/iphone.png" width="45" height="45"><br>
                 Items</a>
