--- a/branches/refactory-1.0/templates/product.php.html
+++ b/branches/refactory-1.0/templates/product.php.html
@@ -125,14 +125,16 @@
 {% block link %}
     <div class="span-30" id="lineshadow" style="width:100%;height:70px;">
         <div class="prepend-2 span-24" id="staffmenu" align="center">
-            <div class="span-4" style="color:black;font-family:arial;font-size:12px;">
+        <!--    <div class="span-4" style="color:black;font-family:arial;font-size:12px;">
 				<span style="visibility: hidden">
 					Handphone Shop<br>
 					Powered by Valuesys
 				</span>
-            </div>
+            </div>-->
 			
-            <div class="span-4" style="padding-top:10px;">
+			
+			
+            <div class="prepend-2 span-4" style="padding-top:10px;">
              
                 <span style="font-size:25px;font-family:impact;text-shadow: 1px 1px 1px #000;">AZ MOBILE001 </span>
             </div>
