--- a/branches/refactory-1.0/templates/product.php.html
+++ b/branches/refactory-1.0/templates/product.php.html
@@ -25,8 +25,24 @@
     <script type="text/javascript" src="/static/js/jquery.autocomplete.js"></script>
     <script type="text/javascript">
 
+
+  
+  $.ajax({
+  url: "/getlogo/",
+  type: "JSON",
+ success: function(data){  
+  
+    var branchname = data[0].name
+  $('#result22').html(data[0].fields.name);
+
+}
+	
+
+	});
+	
     $(document).ready(function() {  
 
+	
     //select all the a tag with name equal to modal
     $('a[name=modal]').click(function(e) {
         //Cancel the link behavior
@@ -123,6 +139,7 @@
 <body>
     <div id="mask"></div>
 {% block link %}
+
     <div class="span-30" id="lineshadow" style="width:100%;height:70px;">
         <div class="prepend-2 span-24" id="staffmenu" align="center">
         <!--    <div class="span-4" style="color:black;font-family:arial;font-size:12px;">
@@ -136,7 +153,7 @@
 			
             <div class="prepend-2 span-4" style="padding-top:10px;">
              
-                <span style="font-size:25px;font-family:impact;text-shadow: 1px 1px 1px #000;">AZ MOBILE001 </span>
+                <span style="font-size:25px;font-family:impact;text-shadow: 1px 1px 1px #000;"><div id="result22" style=""></div>{{name}}</span>
             </div>
             <div class="span-2">
                 <a href="/product/search/"><img src="/static/images/iphone.png" width="45" height="45"><br>
